fixed on mobile view

--- a/assets/main.css
+++ b/assets/main.css
@@ -2724,6 +2724,12 @@ main {
      object-fit: cover;
 }
 
+@media (max-width: 39.9375em) {
+  .section-product .product-wrapper .product-preview-wrapper .product-variant-wrapper {
+    display: none;
+  }
+}
+
 .section-product .product-wrapper .product-preview .product-disclaimer {
   padding: 10px;
 }
@@ -2849,7 +2855,7 @@ main {
 
 @media (max-width: 39.9375em) {
   .section-product .product-form {
-    padding-bottom: 0;
+    padding-bottom: 30px;
   }
 }
 
@@ -2881,6 +2887,12 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+}
+
+@media (max-width: 39.9375em) {
+  .section-product .product-form .option-wrapper.remove-flex {
+    display: block;
   }
 }
 
@@ -2940,8 +2952,7 @@ main {
 
 @media (max-width: 39.9375em) {
   .section-product .product-form .option-label {
-    font-size: 1.125rem;
-    display: none;
+    font-size: 1.25rem;
   }
 }
 
@@ -2956,10 +2967,8 @@ main {
   .section-product .product-form .option-swatch {
     overflow-x: scroll;
     width: 100%;
-    height: 125px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    height: 115px;
+    padding-left: 40px;
   }
 }
 
@@ -3085,6 +3094,12 @@ main {
   }
 }
 
+@media (max-width: 39.9375em) {
+  .section-product .product-form .quantity-option {
+    margin-top: 5px;
+  }
+}
+
 .section-product .product-form .quantity-option .quantity {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3122,6 +3137,12 @@ main {
 .section-product .product-button {
   text-align: center;
   margin-top: 60px;
+}
+
+@media (max-width: 39.9375em) {
+  .section-product .product-button {
+    margin-top: 30px;
+  }
 }
 
 .section-product .product-button button {
